kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tracking-api
spec:
  template:
    spec:
      imagePullSecrets:
        - name: scw-registry-secret
      containers:
        - name: tracking-api
          image: rg.fr-par.scw.cloud/goodfood/tracking-api:dev
          ports:
            - containerPort: 8080
  selector:
    matchLabels:
      app: tracking-api
  replicas: 1
  strategy:
      type: RollingUpdate
